# demo-grid-simulation

./: README.md
example1/: CMakeLists.txt  Example1.PWB  Example1.pwd  Example1_Results_Comparison.xlsx  GENROU.docx  compress_matrix.c  example1.c  example1.h  example1_results.csv  main.c
example1_v2/: Branch.cpp  Branch.hpp  Bus.cpp  Bus.hpp  BusBase.hpp  BusFault.hpp  BusInfinite.cpp  BusInfinite.hpp  CMakeLists.txt  COO_Matrix.hpp  Component.hpp  DynamicSolver.hpp  Evaluator.hpp  GENROU.hpp  Ida.cpp  Ida.hpp  SystemModel.hpp  example1_v2.cpp  example1_v2.hpp  main.cpp
parameter_estimation/two_bus_2025jan27/: Hints.txt  TwoBusJan27.PWB  TwoBusJan27.pwd  collect_data.py
